[package]
name = "reddit2lemmy"
version = "0.1.0"
edition = "2024"

[dependencies]
activitypub_federation = "0.6.5"
bcrypt = "0.17.0"
chrono = "0.4.41"
diesel = { version = "2.1.6" }
diesel-async = "0.4.1"
env_logger = "0.11.8"
gumdrop = "0.8.1"
lemmy_db_schema = { version = "0.19.12", features = ["full"] }
lemmy_db_views = { version = "0.19.12", features = ["full"] }
log = "0.4.27"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
walkdir = "2.5.0"
